# crv

./: .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: gen-emitters.py
src/: crv.c  crv.h  crv_constants.h
test/: test.c  test.h  test_functioncall.c  test_headeronly.c  test_staticlib.c
util/: immediate_shift_calculator.py
